# Clay

./: CMakeLists.txt  LICENCE  info.txt
code/: bitboard.c  clay.c  convert.c  declaration.h  main.c
